fix(mobile): ensure all elements are same width on narrow displays

--- a/style.css
+++ b/style.css
@@ -79,7 +79,7 @@ header {
 
 section {
   display: inline-block;
-  width: 30rem;
+  width: 100%;
 }
 
 /*********************************************
